# centralized-repository

./: .env  Dockerfile  README.md  app.py  extract_openalex.py  pyproject.toml
africannexus/: africannexus.py
api/: africannexus_api.py  dspace_api.py  openalex_api.py  orcid_api.py
config/: config.yaml  logging.conf
data/raw/: openalex_data_20241014_114052.json
data/schema/: content_schema.json
database/: create_db.py  upload_db.py
dspace/: dspace.py
etl/: africannexus_etl.py  dspace_etl.py  openalex_etl.py  orcid_etl.py  unified_schema.py
orcid/: orcid.py
storage/mongodb/: mongodb_connection.py
tests/: test_africannexus.py  test_dspace.py  test_monfodb.py  test_openalex.py  test_orcid.py
trials/: clean.py
trials/data/schema/: content_schema_publications.json  topics_schema_publications.json
trials/database/: create_db.py  upload_db.py
trials/extract/: authors.py  clean.py  concepts.py  institutions.py  publications.py  topics.py
trials/extract/data/raw/authors/: rawauthors.json
trials/extract/data/raw/institutions/: rawinstitutions.json
trials/extract/data/raw/publications/: rawpublications.json
trials/extract/data/raw/topics/: rawtopics.json
trials/extract/data/schema/: content_schema_authors.json  content_schema_institutions.json  content_schema_topics.json
utils/: data_cleaning.py  data_validation.py  logger.py
